// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPhaseTask creates tasks for INSTALL_PACKAGES action 1`] = `
{
  "testPhaseName": {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:target-a": [Function],
  "testPhaseName:target-b": [Function],
  "testPhaseName:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for RUN_PHASES action 1`] = `
{
  "testPhaseName": {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": [
      {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
      {
        "asyncType": "series",
        "displayName": "testPhaseName:testPhaseName",
        "tasks": [
          "task-fn",
          "task-fn",
          "task-fn",
        ],
      },
    ],
  },
  "testPhaseName:testPhaseName": {
    "asyncType": "series",
    "displayName": "testPhaseName:testPhaseName",
    "tasks": [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:testPhaseName:target-a": [Function],
  "testPhaseName:testPhaseName:target-b": [Function],
  "testPhaseName:testPhaseName:target-c": [Function],
}
`;

exports[`createPhaseTask creates tasks for VERIFY_PACKAGES action 1`] = `
{
  "testPhaseName": {
    "asyncType": "series",
    "displayName": "testPhaseName",
    "tasks": [
      "task-fn",
      "task-fn",
      "task-fn",
    ],
  },
  "testPhaseName:target-a": [Function],
  "testPhaseName:target-b": [Function],
  "testPhaseName:target-c": [Function],
}
`;
